--- a/index.html
+++ b/index.html
@@ -287,7 +287,6 @@
         .chat-msg:nth-child(2) { animation-delay: 0.8s; }
         .chat-msg:nth-child(3) { animation-delay: 1.4s; }
         .chat-msg:nth-child(4) { animation-delay: 2.0s; }
-        .chat-msg:nth-child(5) { animation-delay: 2.6s; }
         @keyframes fadeInUp {
             from { opacity: 0; transform: translateY(10px); }
             to { opacity: 1; transform: translateY(0); }
@@ -778,9 +777,9 @@
                 <h1>Your personal <em>GLP-1</em> support companion</h1>
                 <p>ChatGLP provides intelligent, always-on voice and text support for your weight loss journey. Get instant answers on nutrition, supplements, side effects, and everything GLP-1.</p>
                 <div class="hero-actions">
-                    <a href="#contact" class="btn-primary">
+                    <a href="#early-access" class="btn-primary">
                         <svg width="18" height="18" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"/></svg>
-                        Talk to Us
+                        Get Early Access
                     </a>
                     <a href="#features" class="btn-secondary">Learn More</a>
                 </div>
@@ -841,7 +840,7 @@
                         <svg width="26" height="26" fill="none" viewBox="0 0 24 24" stroke="#0090f0" stroke-width="1.8"><path stroke-linecap="round" stroke-linejoin="round" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"/></svg>
                     </div>
                     <h3>SMS Text Support</h3>
-                    <p>Prefer texting? Send a message anytime and get fast, reliable answers. Perfect for quick questions on the go — no app download needed.</p>
+                    <p>Prefer texting? Send a message anytime and get fast, reliable answers. Perfect for quick questions on the go.</p>
                 </div>
                 <div class="feature-card fade-in">
                     <div class="feature-icon">
@@ -881,7 +880,7 @@
             <div class="fade-in">
                 <div class="section-label">How It Works</div>
                 <h2 class="section-title">Support in three simple steps</h2>
-                <p class="section-subtitle" style="margin: 0 auto 0;">No apps to download. No accounts to create. Just reach out.</p>
+                <p class="section-subtitle" style="margin: 0 auto 0;">We're ready to help you on your journey.</p>
             </div>
             <div class="steps">
                 <div class="step fade-in">
@@ -908,7 +907,7 @@
         <div class="cta-card fade-in">
             <h2>Ready to feel supported?</h2>
             <p>Join the thousands getting personalized GLP-1 guidance every day. Your questions deserve real answers.</p>
-            <a href="#contact" class="btn-white">
+            <a href="#early-access" class="btn-white">
                 Get Started
                 <svg width="18" height="18" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2.5"><path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3"/></svg>
             </a>
@@ -1001,21 +1000,19 @@
             error.style.display = 'none';
 
             try {
-                // REPLACE THIS URL with your deployed Google Apps Script URL
                 const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbw-4xRkCM4-In2NV0tqk4jT91BQYTzsv-KwLwjyCjfpPQAaNm2V7Q45XIdtSFvn0st7/exec';
 
-                const response = await fetch(SCRIPT_URL, {
+                const formData = new URLSearchParams();
+                formData.append('email', email);
+                formData.append('timestamp', new Date().toISOString());
+                formData.append('source', 'chatglp-website');
+
+                await fetch(SCRIPT_URL, {
                     method: 'POST',
                     mode: 'no-cors',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({
-                        email: email,
-                        timestamp: new Date().toISOString(),
-                        source: 'chatglp-website'
-                    })
+                    body: formData
                 });
 
-                // no-cors means we can't read the response, but the request goes through
                 form.style.display = 'none';
                 success.style.display = 'flex';
             } catch (err) {
